make code compatible with Java 1.8